--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,7 +5,7 @@
  "password": "123456789",
  "host": "localhost",
  "port": "5432",
- "database": "postgres-docker",
+ "database": "prueba-docker",
  "entities": ["src/**/**/*.entity{.ts,.js}"],
  "migrations": ["src/database/migrations/*{.ts,.js}"],
  "cli": {
