--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "typeorm:migration:generate": "npm run typeorm -- migration:generate -n",
     "typeorm:migration:run": "npm run typeorm -- migration:run",
     "typeorm:revert": "npm run typeorm -- migration:revert"
-
   },
   "dependencies": {
     "@nestjs/common": "^7.6.13",
     "@nestjs/core": "^7.6.13",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/typeorm": "^7.1.5",
+    "class-validator": "^0.13.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
+    "ts-mapper": "^1.2.4",
     "typeorm": "^0.2.31"
   },
   "devDependencies": {
