--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,7 +4,7 @@
  "username": "postgres",
  "password": "123456789",
  "host": "localhost",
- "port": "5432",
+ "port": 5432,
  "database": "prueba-docker",
  "entities": ["src/**/**/*.entity{.ts,.js}"],
  "migrations": ["src/database/migrations/*{.ts,.js}"],
